# gfmodules-nationale-verwijsindex

./: .gitignore  Makefile  README.md  app.conf.autopilot  app.conf.example  docker-compose.yml  gen-certs.sh  generate-oauth-jwt.py  publiccode.yml  pyproject.toml  run-oauth.sh  sonar-project.properties
.github/workflows/: ci.yaml  documentation-linter.yml  generate-pdf.yaml  release-docker.yaml  release-package-venv.yaml  release-package.yaml
app/: application.py  auth.py  config.py  container.py  create_db.py  cron.py  data.py  dependencies.py  jwt_validator.py  main.py  referral_request_payload.py  stats.py
app/data_models/: logging.py  referrals.py
app/db/: db.py  decorator.py  (+1 more)
docker/: Dockerfile  init.sh
docs/: OAuth.md
seed-sql/: seed.sql
sql/: 001-providers-table.sql  007-clean-up-logs-table.sql  008-add-ownerships.sql  009-ura-allowlist.sql  009-ura-whitelist.sql  010-add-encrypted-lmr-id.sql  011-add-lmr-endpoint.sql  012-add-organization-type.sql  013-remove-lmr-attributs.sql  014-add-referral-id.sql  014-oauth.sql  015-remove-ura-table.sql  015-required-org-type.sql  016-drop-allowlist.sql  017-drop-referral-logs.sql  018-add-source-column.sql  018-optional-organization-type.sql  019-add-source-column.sql  020-alter-data-domain-column.sql  020-remove-data-domain-column.sql  021-add-created-at-column.sql  022-increase-pseudonym-length.sql  023-key-info.sql  024-drop-data-domain-column.sql  025-drop-organization-type-column.sql
tests/: conftest.py  test_authentication.py  test_config.py  test_data.py  test_jwt_validator.py  test_logging_payload.py  test_referral_request_logging_repo.py  test_referral_service.py  test_uvicorn_config_parse.py
tools/: generate_test_certs.sh  migrate_db.sh
(+216 files in other folders)
